# gutenberg_kg

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CHEATSHEET.md  CITATION.cff  DOWNLOAD_PIPELINE.md  HANDOFF.md  HANDOFF_IA.md  MANIFESTO.md  README.md  apply_gutenberg_kg.sh  ingest.sh  magna_carta.html  pyproject.toml  release-notes.md
.agentkg/: graph.sqlite
.claude/: settings.json
.github/workflows/: ci.yml
.runpod/: hub.json  tests.json
A Midsummer Nights Dream/: reference.md
A Modest Proposal/: a_modest_proposal.md  reference.md
A Tale of Two Cities/: reference.md
Adventures of Huckleberry Finn/: reference.md
Alices Adventures in Wonderland/: reference.md
Anna Karenina/: reference.md
Beyond Good and Evil/: reference.md
Candide/: candide.md
Common Sense/: common_sense.md
Dead Souls/: reference.md
Don Quixote/: don_quixote.md  reference.md
Emma/: reference.md
Great Expectations/: great_expectations.md  reference.md
Grimms Fairy Tales/: grimms_fairy_tales.txt
Gullivers Travels/: gullivers_travels.md
Hamlet/: hamlet.md  reference.md
Jane Eyre/: reference.md
Leaves of Grass/: leaves_of_grass.md  reference.md
Les Miserables/: les_miserables.md  reference.md
Leviathan/: leviathan.md
Meditations/: meditations.txt  reference.md
Middlemarch/: reference.md
Oedipus King of Thebes/: reference.md
Pride and Prejudice/: pride_and_prejudice.md
Robinson Crusoe/: reference.md
The Adventures of Sherlock Holmes/: the_adventures_of_sherlock_holmes.md
The Aeneid/: reference.md  the_aeneid.md
The Bible/: bible_kjv.txt  reference.md
The Call of the Wild/: the_call_of_the_wild.md
The Count of Monte Cristo/: reference.md
The Federalist Papers/: federalist_papers.txt  reference.md  the_federalist_papers.md
The Idiot/: reference.md  the_idiot.md
The Odyssey/: reference.md  the_odyssey.md
The Picture of Dorian Gray/: reference.md  the_picture_of_dorian_gray.md
The Prince/: the_prince.md
The Red Badge of Courage/: reference.md
The Republic/: reference.md
The Scarlet Letter/: the_scarlet_letter.md
The Strange Case of Dr Jekyll and Mr Hyde/: the_strange_case_of_dr_jekyll_and_mr_hyde.md
The War of the Worlds/: reference.md
The Wealth of Nations/: the_wealth_of_nations.md
The Yellow Wallpaper/: reference.md
Thus Spake Zarathustra/: thus_spake_zarathustra.md
Uncle Toms Cabin/: reference.md
Walden/: walden.md
War and Peace/: reference.md  war_and_peace.md
Wuthering Heights/: wuthering_heights.md
american-literature/Moby Dick/: reference.md
american-literature/The Call of the Wild/: reference.md
american-literature/Walden/: reference.md
analysis/: embedder_benchmark_20260422_235957.json  embedder_benchmark_20260422_235957.md  gutenberg_kg_analysis_20260505.md
ancient-classical/Meditations/: meditations.md
ancient-classical/The Iliad/: reference.md
audel_kg/: .gitignore  pyproject.toml
audel_kg/scripts/: download_ia.py  ingest.py  test_download_ia.py
audel_kg/scripts/catalogs/: audel-electric.txt
audel_kg/src/audel_kg/: __init__.py
audel_kg/src/audel_kg/cli/: __init__.py  cmd_download.py  cmd_ingest.py  main.py  options.py
corpus/: genres.json
corpus/authors/: index.md
docs/: CHEATSHEET.md  CORPUS.md  CORPUS_WISHLIST.md  DOWNLOAD_PIPELINE.md  analysis_v1.2.0.md  release-notes.md
english-literature/A Tale of Two Cities/: a_tale_of_two_cities.md
english-literature/Dracula/: reference.md
english-literature/Gullivers Travels/: reference.md
english-literature/Heart of Darkness/: reference.md
english-literature/Middlemarch/: middlemarch.md
english-literature/Pride and Prejudice/: reference.md
english-literature/Robinson Crusoe/: robinson_crusoe.md
english-literature/The Adventures of Sherlock Holmes/: reference.md
english-literature/The Strange Case of Dr Jekyll and Mr Hyde/: reference.md
english-literature/Treasure Island/: reference.md  treasure_island.md
english-literature/Wuthering Heights/: reference.md
french-literature/The Three Musketeers/: reference.md
french-literature/Twenty Thousand Leagues Under the Sea/: reference.md
philosophy/Beyond Good and Evil/: beyond_good_and_evil.md
philosophy/Common Sense/: reference.md
philosophy/The Federalist Papers/: reference.md
philosophy/The Prince/: reference.md
philosophy/The Wealth of Nations/: reference.md
reports/: fetch_genre_philosophy_2026-05-13_133652.md  ingest_2026-04-01_015951.md  ingest_2026-04-01_031304.md  ingest_2026-04-01_031610.md  ingest_2026-04-01_033926.md  ingest_2026-04-23_215251.md  ingest_2026-05-04_132530.md  ingest_2026-05-04_135554.md  ingest_2026-05-04_175612.md  ingest_2026-05-05_122134.md  ingest_2026-05-06_033043.md  ingest_2026-05-06_044057.md  ingest_2026-05-07_014830.md  ingest_2026-05-07_020626.md  ingest_2026-05-12_033045.md  ingest_2026-05-13_133723.md  ingest_2026-05-15_234014.md  ingest_2026-05-16_211935.md  ingest_2026-05-17_175247.md  ingest_2026-05-17_183411.md
runpod/: Dockerfile  README.md  build_image.sh  build_kg.py  handler.py  push_indices.sh  requirements.txt  test_input.json  test_local.py
russian-literature/Crime and Punishment/: reference.md
russian-literature/Dead Souls/: dead_souls.md
russian-literature/The Brothers Karamazov/: reference.md
science-fiction/A Princess of Mars/: reference.md
science-fiction/At the Earth's Core/: at_the_earths_core.md
science-fiction/At the Mountains of Madness/: at_the_mountains_of_madness.md  reference.md
science-fiction/Flatland/: reference.md
science-fiction/Herbert West: Reanimator/: herbert_west_reanimator.md  reference.md
science-fiction/The Dunwich Horror/: the_dunwich_horror.md
scripts/: benchmark_embedders.py  build_author_index.py  catalog.txt  download_gutenberg.py  download_ia.py  ingest.py  process_logo.py  provenance_verifier.py  push.sh  rebuild_lancedb.sh
tests/: test_authors.py  test_cli.py  test_cmd_snapshot.py  test_cmd_status.py  test_genres.py  test_gutenberg.py  test_ia.py  test_ingest.py  test_options.py  test_version.py
(+4003 files in other folders)
